# Visualgo

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  Makefile  README.md  StartVisualgo.html.lnk  pyproject.toml  run.sh  setup.py
.github/scripts/: compare-version-date.sh  compare-version-master.sh  compare-versions-in-commit.sh
.github/workflows/: CD-deploy-static-page  CD-deploy-static-page.yml  CD-pypi-publish.yml  CI-PR-dev.yml  CI-PR-master.yml  CI-PR-trunk.yml  CI-dev-PR.yml  CI-dev.yml  CI-master-PR.yml  CI-master.yml  CI-releases.yml  CI.yml  python-CI-PR.yml  python-publish.yml  ui-CI-PR.yml
docs/: DeveloperManual.md
scripts/: build.sh  install.sh  start_server.sh
src/: dbg_test.py  dbg_worker.html  debug_test.html  debug_worker.py  dynamic_import.html  dynamic_import.py  index-preloading.js  index.css  index.html  index.js  main.py  main_class_version.py  main_debug.py  mylib.py  pydebuger.py  pyscript.json  pyscript_mylib.py  second_main.py  worker.html  worker.py
src/comm_api/: from_worker.py  to_worker.py
src/pyscript/: ps-template.json
src/ui/: api.py  array.js  button.js  double_linked_list.js  draw_data.js  editor.css  editor.js  index.css  index.html  index.js  linked_list.js  pile.js  primitives.js  ps-template.json  pyscript.json  queue.js  style.css  ui_interface.js  ui_public_functions.js  worker.py
src/ui/dbg/: debugger.py  (+2 more)
src/visualgo/: __init__.py  __main__.py
src/wasm-scripts/: __init__.py  bdb_worker.py  main.py  pyscript_from_worker.py  pyscript_to_worker.py  pyscript_ui_callbacks.py  worker.py
tst/ui/: test_primitives.js
(+16 files in other folders)
