# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "visualgo"
version = "2024.2.4"
description = "Enjoy classic datatype and run python code"
readme = "README.md"
authors = [{ name = "PFA-Visualgo" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["visualgo", "structure", "types", "debugger"]
dependencies = []
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/PFA-Visualgo/Visualgo"
Issues = "https://github.com/PFA-Visualgo/Visualgo/issues"
